Fixed repeat of selecting .proportion
Class .avatar.proportioned already have properties maintain image quality of pexels-katho-motodo image.
Because .proportioned accidentally chained again to set the values of distorting the image.
Update the.proportioned to distorted.

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -6,7 +6,7 @@
     height: auto;
 }
 
-.avatar.proportioned {
+.avatar.distorted{
     width: 200px;
     height: 400px;
 }
